noinst_PROGRAMS = lw_mutex_example lw_condvar_example lw_bitlock_example

INCLUDES = -I../src/

lw_mutex_example_LDADD   = ../src/liblwlock.la
lw_mutex_example_SOURCES = lw_mutex_example.c

lw_condvar_example_LDADD   = ../src/liblwlock.la
lw_condvar_example_SOURCES = lw_condvar_example.c

lw_bitlock_example_LDADD   = ../src/liblwlock.la
lw_bitlock_example_SOURCES = lw_bitlock_example.c

