noinst_PROGRAMS = lw_mutex_example lw_condvar_example lw_bitlock_example lw_monitor_example counter_example

INCLUDES = -I../src/

lw_mutex_example_LDADD   = ../src/liblwlock.la
lw_mutex_example_SOURCES = lw_mutex_example.c

lw_condvar_example_LDADD   = ../src/liblwlock.la
lw_condvar_example_SOURCES = lw_condvar_example.c

lw_bitlock_example_LDADD   = ../src/liblwlock.la
lw_bitlock_example_SOURCES = lw_bitlock_example.c

lw_monitor_example_LDADD   = ../src/liblwlock.la
lw_monitor_example_SOURCES = lw_monitor_example.c

counter_example_LDADD   = ../src/liblwlock.la
counter_example_SOURCES = counter_example.c

